[package]
name = "melin-app"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Trait abstractions for pluggable applications on the Melin sequencer"

[lib]
name = "melin_app"
path = "src/lib.rs"

[dependencies]
base64 = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
