[package]
name = "melin-pipeline"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Lock-free ring buffers with dependency gating for low-latency inter-thread communication"

[dependencies]
# No external dependencies — this is a generic, reusable ring buffer library.

[dev-dependencies]
# Used only by examples/false_sharing.rs for sched_setaffinity. Does not
# bleed into the published library — examples + dev-deps are not shipped.
libc = { workspace = true }

[[example]]
name = "false_sharing"
path = "examples/false_sharing.rs"
