[package]
name = "melin-server-runtime"
version = "0.10.1"
edition = "2024"
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Application-agnostic server runtime with accept loop, journaling, replication, and optional DPDK transport"

[features]
## Compile out debug! and trace! at build time. Eliminates the tracing
## filter check (~5-10 ns) on every call site in the hot path.
release-tracing = ["tracing/max_level_info"]
no-persist = ["melin-transport-core/no-persist"]
## Lightweight per-stage histograms.
latency-trace = [
    "melin-transport-core/latency-trace",
]
## Full tick-to-trade decomposition. Implies latency-trace.
tick-to-trade = ["latency-trace"]
## Kept for backward compatibility — io_uring is now always used.
io-uring = []
## DPDK userspace TCP transport.
dpdk = ["dep:melin-dpdk", "melin-dpdk/dpdk-sys"]
pipeline-stats = ["melin-transport-core/pipeline-stats"]
hash-chain = [
    "melin-journal/hash-chain",
    "melin-transport-core/hash-chain",
]
no-o-direct = [
    "melin-journal/no-o-direct",
    "melin-transport-core/no-o-direct",
]

[dependencies]
melin-app = { path = "../app", version = "0.10.1" }
melin-pipeline = { path = "../pipeline", version = "0.10.1" }
melin-journal = { path = "../journal", version = "0.10.1" }
melin-wire-protocol = { path = "../wire-protocol", version = "0.10.1" }
melin-transport-core = { path = "../transport-core", version = "0.10.1" }
blake3 = "1"
base64 = { workspace = true }
clap = { workspace = true }
crc32c = "0.6"
ed25519-dalek = { workspace = true }
getrandom = "0.4"
io-uring = "0.7"
libc = { workspace = true }
rand = { workspace = true }
rustc-hash = "2"
tracing = { workspace = true }
zerocopy = { version = "0.8", features = ["derive"] }
melin-dpdk = { path = "../dpdk", version = "0.10.1", optional = true }

[dev-dependencies]
# The runtime's library API is application-agnostic. Tests that need a
# concrete `Application`/`AppEvent` to instantiate the generic pipeline
# (replication wire format, DPDK frame fixtures) use the in-tree counter
# example rather than any exchange crate — this keeps the core dependency
# graph free of exchange coupling. Auth-handshake tests build their wire
# frames directly from `melin-wire-protocol::control_codec` (already a
# normal dependency), the same path the runtime itself uses.
#
# Path-only (no version): `melin-example-counter` is `publish = false`, so
# it must not carry a version requirement, and `cargo publish` strips
# version-less dev-dependencies. This is a dev-only dependency cycle
# (counter depends on the runtime), which Cargo permits.
melin-example-counter = { path = "../../examples/counter" }
tempfile = "3"
serial_test = "3"
proptest = "1"
melin-journal = { path = "../journal", version = "0.10.1", features = ["test-utils"] }
melin-transport-core = { path = "../transport-core", version = "0.10.1", features = ["test-utils"] }
