[package]
name = "melin-transport-core"
version = "0.8.0"
edition = "2024"

[lib]
name = "melin_transport_core"
path = "src/lib.rs"

[features]
## Record per-stage latency histograms on shutdown. Adds ~20 ns of clock
## overhead per event. Not for production.
latency-trace = ["dep:hdrhistogram"]
## Print per-stage busy/idle utilization on shutdown.
pipeline-stats = []
## Skip all journal I/O (no writes, no fsync). Unsafe for production —
## nothing is persisted — but useful for benchmarking.
no-persist = []
## BLAKE3 tamper-evident hash chain — the chain state itself lives in
## melin-journal, but the pipeline forwards chain hash publishes through
## a SeqLock gated on this feature so downstream snapshot consumers see
## the same value.
hash-chain = ["melin-journal/hash-chain"]
## Open the journal without `O_DIRECT`. Passthrough — see the
## `melin-journal` feature of the same name. Benchmarking only.
no-o-direct = ["melin-journal/no-o-direct"]
## Expose `JournaledApp::apply_journaled` / `tick_journaled` /
## `writer_mut` — synchronous test-only primitives that journal an
## event then apply it on the calling thread. Production drives events
## through the disruptor pipeline and never uses these. Activate from
## a consuming crate's `[dev-dependencies]` only.
test-utils = []

[dependencies]
crc32c = "0.6"
hdrhistogram = { version = "7", optional = true }
io-uring = "0.7"
libc = { workspace = true }
tracing = { workspace = true }
# Typed views over raw byte buffers for the replication wire format —
# replaces field-by-field extend_from_slice / try_into chains with a
# single struct write/read. derive feature for `FromBytes` / `IntoBytes`.
zerocopy = { version = "0.8", features = ["derive"] }
melin-app = { path = "../app" }
melin-disruptor = { path = "../disruptor" }
melin-journal = { path = "../journal" }

[dev-dependencies]
tempfile = "3"
proptest = "1"
# Re-pull melin-journal with `test-utils` so the byte-sweep crash test
# can shrink the journal prealloc chunk to keep per-iteration cost bounded.
melin-journal = { path = "../journal", features = ["test-utils"] }
