[package]
name = "melin-wire-protocol"
version = "0.10.0"
edition = "2024"
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Length-prefixed wire framing and transport listener for TCP and Unix sockets"

[dev-dependencies]
tempfile = "3"
