[package]
name = "melin-admin"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Admin CLI and TUI for Melin exchange operations"

[[bin]]
name = "melin-admin"
path = "src/main.rs"

[[bin]]
name = "melin-keygen"
path = "src/keygen.rs"

[[bin]]
name = "melin-promote"
path = "src/promote.rs"

[dependencies]
melin-client = { path = "../client" }
melin-protocol = { path = "../protocol" }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"
