[package]
name = "melin-bench"
version = "0.8.0"
edition = "2024"

[features]
## Default mirrors `melin-server`'s default set so plain `cargo run -p
## melin-bench` behaves like a stock server build. Disable individual
## features with `--no-default-features --features=...` to benchmark
## without trading, hash-chain, or release-tracing.
default = ["trading", "hash-chain", "release-tracing"]
## Forward to `melin-server/trading` (real matching engine).
trading = ["melin-server/trading"]
## Forward to `melin-server/hash-chain` (BLAKE3 tamper-evident journal
## chain — adds ~15-30 ns per event).
hash-chain = ["melin-server/hash-chain"]
## Forward to `melin-server/release-tracing` (compile out debug!/trace!).
release-tracing = ["melin-server/release-tracing"]
## Transport-only build — short-circuits `Exchange::execute` so the
## matching hot path is bypassed. Mutually exclusive with `trading` at
## the server level. Use
## `--no-default-features --features=skip-order-exec` to bench the
## pipeline without the matching engine.
skip-order-exec = ["melin-server/skip-order-exec"]
no-persist = ["melin-server/no-persist"]
## Open the journal without `O_DIRECT`. Passthrough — see the
## `melin-journal` feature of the same name. Use this when benching on
## consumer NVMe drives that lack Power Loss Protection.
no-o-direct = ["melin-server/no-o-direct"]
## Forward to `melin-server/latency-trace` — lightweight 4-stage
## histograms only.
latency-trace = ["melin-server/latency-trace"]
## Forward to `melin-server/tick-to-trade` — full per-stage
## decomposition (9+ stages). Implies latency-trace via the server
## crate's feature graph.
tick-to-trade = ["melin-server/tick-to-trade"]
## Kept for backward compatibility — io_uring is now always used.
io-uring = []
## DPDK userspace TCP transport. Implies `trading` + `release-tracing`
## because the server crate needs an app selected to compile, and
## `release-tracing` matches the production-style binary the DPDK rig
## benches against. Add `--features=hash-chain` separately if you want
## to measure with the journal hash chain on; add `skip-order-exec`
## and drop `trading` to bench transport-only.
dpdk = [
    "dep:melin-dpdk",
    "melin-dpdk/dpdk-sys",
    "dep:smoltcp",
    "trading",
    "release-tracing",
]
pipeline-stats = ["melin-server/pipeline-stats"]
plot = ["dep:plotters"]

[lib]
name = "melin_bench"
path = "src/lib.rs"

[[bin]]
name = "melin-bench"
path = "src/main.rs"

[[bin]]
name = "melin-plot"
path = "src/plot.rs"
required-features = ["plot"]

[[bin]]
name = "journal_writer_bench"
path = "src/journal_writer_bench.rs"

[dependencies]
melin-engine = { path = "../engine" }
melin-trading = { path = "../trading" }
melin-types = { path = "../types" }
melin-journal = { path = "../../core/journal" }
melin-disruptor = { path = "../../core/disruptor" }
melin-protocol = { path = "../protocol" }
melin-server = { path = "../server", default-features = false }
melin-app = { path = "../../core/app" }
melin-transport-core = { path = "../../core/transport-core" }
base64 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = "0.3"
hdrhistogram = "7"
humantime = { workspace = true }
rand = "0.9"
libc = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
io-uring = "0.7"
melin-dpdk = { path = "../../core/dpdk", optional = true }
smoltcp = { version = "0.13", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
plotters = { version = "0.3", optional = true, default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "ttf", "line_series"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Streaming gzip decode for ITCH 5.0 dumps. flate2 with the default
# `miniz_oxide` backend keeps the dep tree pure-Rust; we don't need
# zlib-ng-level throughput because the bottleneck is the parser, not
# decompression.
flate2 = "1"
