[package]
name = "melin-bench"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Benchmark suite for the Melin exchange"
default-run = "melin-bench"

[features]
## Default mirrors `melin-server`'s default set so plain `cargo run -p
## melin-bench` behaves like a stock server build. Disable individual
## features with `--no-default-features --features=...` to benchmark
## without hash-chain or release-tracing.
default = ["hash-chain", "release-tracing"]
hash-chain = [
    "melin-journal/hash-chain",
    "melin-transport-core/hash-chain",
    "melin-server-runtime/hash-chain",
]
release-tracing = ["tracing/max_level_info", "melin-server-runtime/release-tracing"]
skip-order-exec = [
    "melin-exchange-core/skip-order-exec",
    "melin-server/skip-order-exec",
    "hash-chain",
    "release-tracing",
]
no-persist = ["melin-transport-core/no-persist", "melin-server-runtime/no-persist"]
no-o-direct = [
    "melin-journal/no-o-direct",
    "melin-transport-core/no-o-direct",
    "melin-server-runtime/no-o-direct",
]
latency-trace = [
    "melin-transport-core/latency-trace",
    "melin-server-runtime/latency-trace",
    "melin-server/latency-trace",
]
tick-to-trade = ["latency-trace", "melin-server-runtime/tick-to-trade"]
## Kept for backward compatibility — io_uring is now always used.
io-uring = []
## DPDK userspace TCP transport. Implies `release-tracing` to match the
## production-style binary the DPDK rig benches against. Add
## `--features=hash-chain` separately if you want to measure with the
## journal hash chain on; add `skip-order-exec` to bench transport-only.
dpdk = [
    "dep:melin-dpdk",
    "melin-dpdk/dpdk-sys",
    "dep:smoltcp",
    "release-tracing",
]
pipeline-stats = [
    "melin-transport-core/pipeline-stats",
    "melin-server-runtime/pipeline-stats",
]
plot = ["dep:plotters"]

[lib]
name = "melin_bench"
path = "src/lib.rs"

[[bin]]
name = "melin-bench"
path = "src/main.rs"

[[bin]]
name = "melin-plot"
path = "src/plot.rs"
required-features = ["plot"]

[[bin]]
name = "journal_writer_bench"
path = "src/journal_writer_bench.rs"

[dependencies]
melin-exchange-core = { path = "../exchange-core" }
melin-trading = { path = "../trading" }
melin-types = { path = "../types" }
melin-journal = { path = "../../core/journal" }
melin-pipeline = { path = "../../core/pipeline" }
melin-protocol = { path = "../protocol" }
melin-wire-protocol = { path = "../../core/wire-protocol" }
melin-server-runtime = { path = "../../core/server-runtime" }
melin-server = { path = "../server", default-features = false }
melin-app = { path = "../../core/app" }
melin-transport-core = { path = "../../core/transport-core" }
base64 = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = "0.4"
hdrhistogram = "7"
humantime = { workspace = true }
rand = "0.10"
libc = { workspace = true }
tikv-jemallocator = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
io-uring = "0.7"
melin-dpdk = { path = "../../core/dpdk", optional = true }
smoltcp = { package = "fastcp", version = "0.13", default-features = false, features = ["std", "medium-ethernet", "proto-ipv4", "socket-tcp"], optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
plotters = { version = "0.3", optional = true, default-features = false, features = ["svg_backend", "bitmap_backend", "bitmap_encoder", "ttf", "line_series"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# Streaming gzip decode for ITCH 5.0 dumps. flate2 with the default
# `miniz_oxide` backend keeps the dep tree pure-Rust; we don't need
# zlib-ng-level throughput because the bottleneck is the parser, not
# decompression.
flate2 = "1"
