[package]
name = "melin-client"
version = "0.10.1"
edition = "2024"
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Blocking client library for the Melin exchange binary protocol"

[dependencies]
ed25519-dalek = { workspace = true }
melin-protocol = { path = "../protocol", version = "0.10.1" }
melin-wire-protocol = { path = "../../core/wire-protocol", version = "0.10.1" }
