[package]
name = "melin-engine"
version = "0.7.0"
edition = "2024"

[features]
## Short-circuit `Exchange::execute` to a single `Rejected{NoLiquidity}`
## push instead of running the matching engine. Used by the server's
## `skip-order-exec` feature to isolate transport throughput from
## matching cost. Other Exchange methods (`cancel`, `deposit`,
## `withdraw`, …) still run normally — only the matching hot path is
## bypassed, which is what bench workloads (dominated by `SubmitOrder`)
## measure.
skip-order-exec = []

default = []

[dependencies]
rustc-hash = "2"
tracing = { workspace = true }
melin-trading = { path = "../trading" }
melin-types = { path = "../types" }
astenn = { git = "ssh://git@github.com/pierre-l/astenn.git" }

[dev-dependencies]
proptest = "1"
tempfile = "3"
