[package]
name = "melin-gateway-core"
version = "0.10.0"
edition = "2024"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "FIX 4.4 session infrastructure and Ed25519 auth for order entry and market data gateways"

[dependencies]
ed25519-dalek = { workspace = true }

[dev-dependencies]
proptest = "1"
